--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+      - name: start app
+        run: java -jar app-mbank.jar
+        working-directory: artifacts
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
