--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,8 +22,7 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
       - name: start app
-        run: java -jar app-mbank.jar
-        working-directory: artifacts
+        run: java -jar /artifacts/app-mbank.jar
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
