--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,8 @@ jobs:
           distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-
+      - name: Run app
+        run: java -jar app-mbank.jar
       - name: Build with Gradle
         run: ./gradlew test
 
