--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Run app
-        run: java -jar app-mbank.jar
+        run: java -jar ./artifacts/app-mbank.jar
       - name: Build with Gradle
         run: ./gradlew test
 
